# pytest-familywise

./: .gitignore  README.md  pyproject.toml
pytest_familywise/: __init__.py
pytest_random/: __init__.py
tests/: test_plugin.py
